--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,13 @@
     "dir": "auto",
     "icons": [
         {
-            "src": "images/brandlogo/logo.png",
+            "src": "Images/brandlogo/logo.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "images/brandlogo/logo.png",
+            "src": "Images/brandlogo/logo.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
